taskdetails on mytask

--- a/pcg/Views/Admin/AddTask.cshtml
+++ b/pcg/Views/Admin/AddTask.cshtml
@@ -26,8 +26,8 @@
         <input asp-for="Task" class="form-control"/>
     </div>                      
     <div class="form-group">
-        <label asp-for="Remarks" class="control-label">Remarks</label>
-        <input asp-for="Remarks" class="form-control"/>
+        <label asp-for="Details" class="control-label">Details</label>
+        <textarea asp-for="Details" class="form-control" rows="4"></textarea>
     </div>
     <div class="form-group">
                     <label asp-for="Description" class="control-label"></label>
