--- a/pcg/Views/Admin/Index.cshtml
+++ b/pcg/Views/Admin/Index.cshtml
@@ -6,14 +6,14 @@
     <meta http-equiv="Cache-Control" content="no-cache, no-store, must-revalidate">
     <meta http-equiv="Pragma" content="no-cache">
     <meta http-equiv="Expires" content="0">
+    <link rel="stylesheet" href="~/css/custom.css" />
 </head>
 <h1 style="text-align:center">Newest Task</h1>
-<table class="table table-hover table-responsive-sm table-sm">
+<table class="ctable ctable-hover ctable-responsive-sm ctable-sm">
     <thead>
         <tr>
             <th class="text-center text-uppercase">Task No.</th>
             <th class="text-center text-uppercase">Task</th>
-            <th class="text-center text-uppercase">Remarks</th>
             <th class="text-center text-uppercase">Description</th>
             <th class="text-center text-uppercase">Assignee</th>
             <th class="text-center text-uppercase">Client/Site</th> 
@@ -26,7 +26,6 @@
         <tr>
             <td class="text-center text-nowrap">@dr["TaskId"].ToString()</td>
             <td class="text-center text-nowrap">@dr["Task"].ToString()</td>
-            <td class="text-center text-nowrap">@dr["Remarks"].ToString()</td>
             <td class="text-center text-nowrap">@dr["Description"].ToString()</td>
             <td class="text-center text-nowrap">@dr["Name"].ToString()</td>
             <td class="text-center text-nowrap">@dr["Site"].ToString() @dr["Client"].ToString()</td>
@@ -36,12 +35,11 @@
     </tbody>
 </table>
 <h1 style="text-align:center">Recent Forwarded Task</h1>
-<table class="table table-hover table-responsive-sm table-sm">
+<table class="ctable ctable-hover ctable-responsive-sm ctable-sm">
     <thead>
         <tr>
             <th class="text-center text-uppercase">Task No.</th>
             <th class="text-center text-uppercase">Task</th>
-            <th class="text-center text-uppercase">Remarks</th>
             <th class="text-center text-uppercase">Description</th>
             <th class="text-center text-uppercase">Assignee</th>
             <th class="text-center text-uppercase">Client/Site</th> 
@@ -54,7 +52,6 @@
         <tr>
             <td class="text-center text-nowrap">@dr["TaskId"].ToString()</td>
             <td class="text-center text-nowrap">@dr["Task"].ToString()</td>
-            <td class="text-center text-nowrap">@dr["Remarks"].ToString()</td>
             <td class="text-center text-nowrap">@dr["Description"].ToString()</td>
             <td class="text-center text-nowrap">@dr["Name"].ToString()</td>
             <td class="text-center text-nowrap">@dr["Site"].ToString() @dr["Client"].ToString()</td>
@@ -64,12 +61,11 @@
     </tbody>
 </table>
 <h1 style="text-align:center">Recent Approved Task</h1>
-<table class="table table-hover table-responsive-sm table-sm">
+<table class="ctable ctable-hover ctable-responsive-sm ctable-sm">
     <thead>
         <tr>
             <th class="text-center text-uppercase">Task No.</th>
             <th class="text-center text-uppercase">Task</th>
-            <th class="text-center text-uppercase">Remarks</th>
             <th class="text-center text-uppercase">Description</th>
             <th class="text-center text-uppercase">Assignee</th>
             <th class="text-center text-uppercase">Client/Site</th> 
@@ -82,7 +78,6 @@
         <tr>
             <td class="text-center text-nowrap">@dr["TaskId"].ToString()</td>
             <td class="text-center text-nowrap">@dr["Task"].ToString()</td>
-            <td class="text-center text-nowrap">@dr["Remarks"].ToString()</td>
             <td class="text-center text-nowrap">@dr["Description"].ToString()</td>
             <td class="text-center text-nowrap">@dr["Name"].ToString()</td>
             <td class="text-center text-nowrap">@dr["Site"].ToString() @dr["Client"].ToString()</td>
