--- a/pcg/Views/User/TaskDetail.cshtml
+++ b/pcg/Views/User/TaskDetail.cshtml
@@ -7,9 +7,11 @@
     <meta http-equiv="Cache-Control" content="no-cache, no-store, must-revalidate">
     <meta http-equiv="Pragma" content="no-cache">
     <meta http-equiv="Expires" content="0">
+    <link rel="stylesheet" href="~/lib/bootstrap/dist/css/bootstrap.min.css" />
+    <link rel="stylesheet" href="~/css/custom.css" />
 </head>
 <h1 style="text-align:center">Task Details</h1>
-<table class="table table-hover table-responsive-sm table-sm">
+<table class="ctable ctable-hover ctable-responsive-sm ctable-sm" style="width: 100%; white-space: nowrap;">
     <thead>
         <tr>
             <th class="text-center text-uppercase">Task No.</th>
