--- a/pcg/wwwroot/css/custom.css
+++ b/pcg/wwwroot/css/custom.css
@@ -1,68 +1,144 @@
-﻿.sidebar {
-    height: 100%;
-    width: 18%;
-    position: fixed;
-    top: 0;
-    left: 0;
-    background-color: #f7f786;
-    padding-top: 0px; /* Adjust this according to your top bar height */
-}
-.sidebar-header {
-    text-align: center;
-    padding: 10px;
-    margin-top: 0; /* Add margin-top to move it to the very top */
-    background-color: #fff952; /* Optional: Change background color */
-    color: black; /* Optional: Change text color */
-    font-weight: bold;
-    cursor: pointer;
-}
-.container {
-    width: 82%;
-    margin-left: 18%;
+﻿.ctable {
+    width: 100%;
+    margin-bottom: 1rem;
+    color: #000000;
 }
 
-.sidebar a {
-    padding: 6px;
-    text-decoration: none;
-    font-size: 20px;
-    color: black;
+.ctable th {
+    padding: 0.75rem;
+    vertical-align: top;
+    border: 1px solid #000000;
+    border-bottom: 0px;
+    background-color: #fffa36;
+}
+
+    .ctable td {
+        padding: 0.75rem;
+        vertical-align: top;
+        border-left: 1px solid #000000;
+        border-right: 1px solid #000000;
+        background-color: #eeeeee;
+        color: #000000;
+    }
+
+    .ctable thead tr th {
+        border-bottom: 1px solid #000000;
+    }
+
+    .ctable tr:last-child td {
+        border-bottom: 1px solid #000000;
+    }
+
+.ctable-hover {
+    color: #000000;
+}
+
+    .ctable-hover tbody tr:hover td {
+        color: #000000;
+        background-color: #fffa36;
+        transition: background-color 0.3s ease, color 0.3s ease;
+    }
+
+
+.ctable-sm th,
+.ctable-sm td {
+    padding: 0.3rem;
+}
+
+@media (max-width: 576px) {
+  .ctable-responsive-sm {
     display: block;
+    width: 100%;
+    overflow-x: auto;
+    -webkit-overflow-scrolling: touch;
+  }
 }
 
-    .sidebar a:hover {
-        background-color: #fff952;
-        font-weight: bold;
+.no-hover {
+    pointer-events: none; 
+}
+
+    .no-hover:hover {
+        background-color: initial;
     }
 
-/* Media Query for smaller screens */
-@media (min-width: 768px) {
-    .sidebar {
-        height: 8%;
-        width: 100%;
-        position: fixed;
-        top: 0;
-        left: 0;
-        background-color: #f7f786;
-        padding-top: 0px; /* Adjust this according to your top bar height */
+.cpagination {
+    display: flex;
+    justify-content: center;
+    list-style: none;
+    padding: 0;
+    margin: 0;
+}
+
+    .cpagination li {
+        margin: 0;
+        padding: 0;
     }
 
-    .sidebar-header {
-        text-align: center;
-        padding: 10px;
-        margin-top: 0; /* Add margin-top to move it to the very top */
-        background-color: #fff952; /* Optional: Change background color */
-        color: black; /* Optional: Change text color */
-        font-weight: bold;
-        cursor: pointer;
-    }
+        .cpagination li a {
+            color: #000000;
+            padding: 10px 15px;
+            cursor: pointer;
+            font-size: 16px;
+            font-weight: bold;
+            transition: background-color 0.3s ease;
+            z-index: 1;
+        }
 
-    .container {
-        height: 100%;
-        width: 100%;
-        margin-top: 8%;
-    }
+            .cpagination li a:hover {
+                background-color: #000000;
+                color: #ffffff;
+                text-decoration: none;
+            }
 
-    .sidebar a {
-        font-size: 18px;
-    }
+.cpage-item:first-child .cpage-link {
+    border-radius: 20px 0 0 20px;
+    color: #000;
+    background-color: #fffa36;
+    border-color: #000000;
+}
+
+.cpage-item:last-child .cpage-link {
+    border-radius: 0 20px 20px 0;
+    color: #000;
+    background-color: #fffa36;
+    border-color: #000000;
+}
+
+.cpage-item:first-child .cpage-link:hover {
+    border-radius: 20px 0 0 20px;
+    color: #ffffff;
+    background-color: #000000;
+    border-color: #000000;
+}
+
+.cpage-item:last-child .cpage-link:hover {
+    border-radius: 0 20px 20px 0;
+    color: #ffffff;
+    background-color: #000000;
+    border-color: #000000;
+}
+
+.cpage-item.active .cpage-link {
+    z-index: 1;
+    color: #000;
+    background-color: #fffa36;
+    border-color: #fffa36;
+}
+
+.cpage-item.disabled .cpage-link {
+    color: #ffffff;
+    pointer-events: none;
+    cursor: not-allowed;
+    background-color: #000000;
+    border-color: #fffa36;
+}
+
+.ccard {
+    flex: 1 1 calc(100% - 20px);
+    max-width: calc(100% - 20px);
+    background: rgba(231, 231, 231, 0.678);
+    box-shadow: rgba(0, 0, 0, 0.4) 0px 2px 4px, rgba(0, 0, 0, 0.3) 0px 7px 13px -3px, rgba(0, 0, 0, 0.2) 0px -3px 0px inset;
+    padding: 24px;
+    margin-bottom: 20px;
 }
